# PoloniexAPIWrapper

./: CMakeLists.txt
cpp/: PoloniexClient.cpp  Request.cpp  main.cpp
hpp/: PoloniexClient.hpp  Request.hpp
